# advent-of-code

./: .gitignore  CMakeLists.txt  README.md  day5.cpp
2025/: CMakeLists.txt  day1.cpp  day4.cpp
